# lidar-camera-fusion-for-adas

./: .gitignore  README.md
src/cameracap/: CMakeLists.txt  package.xml
src/cameracap/cfg/: libtkDNN.so_arm
src/cameracap/cmake/: FindCUDNN.cmake  tkDNNConfig.cmake
src/cameracap/include/: detector.hpp  fastimgdetector.h  imgdetector.h
src/cameracap/include/tkDNN/: DetectionNN.h
src/cameracap/src/: cameracap_node.cpp  fastimgdetector.cpp  imgdetector.cpp
src/lidardet/: CMakeLists.txt  package.xml
src/lidardet/cfgs/dataset_configs/: kitti_dataset.yaml  nuscenes_dataset.yaml  robosense_dataset.yaml
src/lidardet/cfgs/kitti_models/: AFDet_1.yaml  afdet.yaml  afdet_NonSample.yaml  afdet_rpn.yaml  afdet_test.yaml  centernet_multihead.yaml  centernet_multihead_twostage.yaml  centernet_secondSSFA_twostage_0130.yaml  onenet.yaml  onenet_secondSSFA_twostage_0130.yaml  onenet_twostage_0130.yaml  second.yaml
src/lidardet/cfgs/nuscenes_models/: cbgs_centernet_multihead.yaml  cbgs_pp_multihead.yaml
src/lidardet/cfgs/robosense_models/: robosense_cbgs_pp_multihead.yaml  robosense_cbgs_pp_multihead_all_1_15.yaml  robosense_cbgs_pp_multihead_test.yaml  robosense_centernet_1_27.yaml  robosense_centernet_multi.yaml  robosense_centernet_v2_2_24.yaml  robosense_pointpillar.yaml
src/lidardet/src/: convertgps.py  fusion.py  objectbase.py  ros_detector.py  tracker.py
src/objmsg/: CMakeLists.txt  package.xml
src/objmsg/msg/: obj.msg  objArray.msg
src/obs_msgs/: CMakeLists.txt  package.xml
src/obs_msgs/msg/: PerceptionObstacle.msg  PerceptionObstacles.msg  PredictedObstacle.msg  PredictedObstacles.msg  TrajPoint.msg  Trajectory.msg
src/prediction/: bak.py  description.txt  obstacle_container.py  predict_test.py  predictnew.py  predictold.py  publish_carla_obs.py  send_apol_obs.py  send_obs.py  spawn_npc.py
src/prediction/data/: model_epoch_0016.pt
